# dminr-1

./: README.md  get_data.py
BM25rust/bm25/: Cargo.toml  _main.rs  build.sh  test.py
BM25rust/bm25/src/: ds.rs  lib.rs  main.rs  score.rs
research/: 01_initial_investigation.md  02_bert_output_layer.md  03_relationship_dataset.md  04_dataset_tags.md  05_category_definitions.md
topics/: jo_biden.txt
